task-15/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: front-app
  name: front-app
  namespace: abdulaziz
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: front-app
status:
  loadBalancer: {}
