task-15/front-ing.yaml
# prettier-ignore
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotation:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: front-ing
  namespace: abdulaziz
spec:
  ingressClassName: nginx
  rules:
  - host: abdulaziz.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: front-app
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
    - hosts:
      - abdulaziz.nvrbckdown.uz
      secretName: abdulaziz-tls
status:
  loadBalancer: {}
